# ink-workshop

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  README.md
advanced-workshop/player/: Cargo.toml  lib.rs
beginners-workshop/basic-player/: Cargo.toml  cmd  expand.rs  lib.rs
contract-transfer/: package.json
frontend/: .eslintrc.json  README.md  next-i18next.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/Board/: Board.tsx
frontend/components/Board/Pixel/: Pixel.tsx
frontend/components/Board/PlayerTurnSoundEffect/: PlayerTurnSoundEffect.tsx  index.ts
frontend/components/Board/ScoreItem/: ScoreItem.tsx
frontend/components/Button/: Button.tsx
frontend/components/ConnectWallet/: ConnectWallet.tsx
frontend/components/ConnectWalletModal/: ConnectWalletModal.tsx
frontend/components/ConnectWalletModal/PlayerSelect/: PlayerSelect.tsx  index.ts
frontend/components/Entity/: Entity.tsx
frontend/components/ExternalLink/: ExternalLink.tsx
frontend/components/GameStatus/: GameStatus.tsx
frontend/components/GameStatus/FinishedStatus/: FinishedStatus.tsx  index.ts
frontend/components/GameStatus/FormingStatus/: FormingStatus.tsx  index.ts
frontend/components/GameStatus/RunningStatus/: RunningStatus.tsx
frontend/components/Layout/: Layout.tsx
frontend/components/Layout/Nav/: Nav.tsx
frontend/components/Layout/Notifications/: Notifications.tsx
frontend/components/Layout/Rules/: Rules.tsx
frontend/components/Modal/: Modal.tsx
frontend/components/NumberInput/: NumberInput.tsx
frontend/components/Sidebar/: Sidebar.tsx
frontend/components/Snackbar/: Snackbar.tsx
frontend/components/ToggleSwitchLabel/: ToggleSwitchLabel.tsx  index.ts
frontend/components/pg-game/: GamePage.tsx
frontend/components/pg-game/GameBoard/: GameBoard.tsx
frontend/constants/: game.ts
frontend/constants/game/: metadata.json
frontend/contexts/: AudioSettingsContext.tsx  GameContext.tsx  LanguageContext.tsx  UIContext.tsx
frontend/hooks/: useAudioSettings.ts  useGameContract.ts  useGameEvents.ts  useLanguageSettings.ts
frontend/hooks/useGameContract/: data.ts  types.ts  useGameContract.ts
frontend/hooks/useGameEvents/: types.ts  useGameEvents.ts
frontend/lib/useInk/: InkProvider.tsx  constants.ts  index.ts
frontend/lib/useInk/hooks/: index.ts  useApi.ts  useBlockHeader.ts  useBlockSubscription.ts  useConfig.ts  useContract.ts  (+9 more)
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/pages/game/: [address].tsx
frontend/public/: dark-sea-creatures.json  sea-creatures.json  sea-creatures.lottie  squink.json
frontend/styles/: globals.css
frontend/utils/: utils.ts
game/: Cargo.toml  drive-game.sh  lib.rs
game/frontend/: tailwind.config.js
game/frontend/components/Board/ScoreItem/: index.ts
game/frontend/components/CodeBlock/: CodeBlock.tsx
game/frontend/components/ConnectWalletModal/: ConnectWalletModal.tsx
game/frontend/components/ConnectWalletModal/PlayerSelect/: PlayerSelect.tsx
game/frontend/components/GameStatus/: GameStatus.tsx  index.ts
game/frontend/components/GameStatus/FinishedStatus/: FinishedStatus.tsx
game/frontend/components/GameStatus/RunningStatus/: index.ts
game/frontend/components/Layout/: Layout.tsx
game/frontend/components/Layout/GameLogs/: GameLogs.tsx  index.ts
game/frontend/components/Layout/Nav/: Nav.tsx
game/frontend/components/LottieEntity/: LottieEntity.tsx
game/frontend/components/SimpleWidget/: SimpleWidget.tsx  index.ts
game/frontend/components/Snackbar/: Snackbar.tsx
game/frontend/components/ToggleSwitch/: ToggleSwitch.tsx
game/frontend/components/pg-game/: GamePage.tsx
game/frontend/components/pg-game/GameBoard/: GameBoard.tsx
game/frontend/components/pg-game/GameBoard/Settings/LanguageSelect/: LanguageSelect.tsx  index.ts
game/frontend/constants/game/: metadata.json
game/frontend/contexts/: AudioSettingsContext.tsx
game/frontend/hooks/useGameContract/: data.ts  index.ts  useGameContract.ts
game/frontend/hooks/useGameEvents/: index.ts
game/frontend/lib/useInk/hooks/: useContractCallDecoded.ts  useNotifications.ts
game/frontend/lib/useInk/models/extrinsics/: model.ts
game/frontend/lib/useInk/providers/api/: provider.tsx
game/frontend/lib/useInk/providers/blockHeader/: context.ts  provider.tsx
game/frontend/lib/useInk/providers/config/: context.ts  model.ts
game/frontend/lib/useInk/providers/contractEvents/: reducer.ts
game/frontend/lib/useInk/providers/extension/: context.ts  model.ts
game/frontend/lib/useInk/providers/notifications/: context.ts  model.ts
game/frontend/lib/useInk/types/: index.ts
game/frontend/lib/useInk/utils/: contractFunctionUtils.ts  getExpiredItem.ts  parseUnits.ts
game/frontend/pages/: index.tsx
game/frontend/pages/api/: gm.ts
game/frontend/public/locales/en/: common.json  events.json
game/frontend/public/locales/es/: common.json  rules.json
game/frontend/public/locales/fr/: common.json  events.json  rules.json
intelligent-player/: Cargo.toml  create-player.sh  lib.rs  stresstest.sh
player/: lib.rs
simple-player/: Cargo.toml  lib.rs
smart-faucet/: Cargo.toml  README.md  lib.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
smart-faucet/frontend/: package.json  tailwind.config.js
smart-faucet/frontend/src/: App.tsx  constants.ts
smart-faucet/frontend/src/assets/: smart_faucet.json
smart-faucet/ui/src/Snackbar/: Snackbar.tsx
stresstest/: Cargo.toml  README.md  create-player.sh  lib.rs  stresstest.sh
test-player/: Cargo.toml  lib.rs
testing-strategies/: .gitignore  README.md
testing-strategies/corner-player/: Cargo.toml  lib.rs
testing-strategies/corner-player/src/: lib.rs
testing-strategies/my-player/: Cargo.toml  build_contracts.sh
testing-strategies/my-player/src/: drink_tests.rs  e2e_tests.rs  lib.rs  switching_strategies.rs  unit_tests.rs
testing-strategies/rand-player/: Cargo.toml  lib.rs
testing-strategies/rand-player/src/: lib.rs
workshop/: 1_SETUP.md  2_BEGINNER_WORKSHOP.md  2_THE_FIRST_GAME.md  3_ADVANCED_WORKSHOP.md  game.contract
(+37 files in other folders)
