[package]
name = "squink_splash"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0-alpha"}
test-player = { path = "../test-player", features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
