[package]
name = "squink_splash"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", branch = "gn/extra_gas_config", default-features = false }

[dev-dependencies]
ink_e2e = { git = "https://github.com/paritytech/ink", branch = "gn/extra_gas_config" }
test-player = { path = "../test-player", features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
