[package]
name = "test-player"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", branch = "gn/extra_gas_config", default-features = false }

rand = { version = "0.8.3", features = ["small_rng"], default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
