[package]
name = "my-player"
authors = ["Piotr Mikołajczyk", "Cardinal", "Aleph Zero Foundation"]
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
ink = { version = "=4.3.0", default-features = false, features = ["ink-debug"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
#drink = { version = "=0.1.7", features = ["session"] }
drink = { path = "../../../drink/drink", features = ["session"] }
ink_e2e = { version = "=4.3.0" }

squink_splash = { path = "../../game", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

# Testing flavors
unit-tests = []
drink-tests = []
e2e-tests = []
