[package]
name = "rand-player"
authors = ["Piotr Mikołajczyk", "Cardinal", "Aleph Zero Foundation"]
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
