[package]
name = "rand-player"
authors = ["Piotr Mikołajczyk", "Cardinal", "Aleph Zero Foundation"]
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
ink = { git = "https://github.com/paritytech/ink", branch = "gn/extra_gas_config", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
